[package]
name = "rust_net"
version = "0.1.0"
authors = ["Houadef_Salih <houadef.salih@univ-constantine2.dz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

local-ip-address = "0.4.4"
threadpool = "1.8.1"
serde = {version="1.0.136",features=["derive"]}
serde_json = "1.0.78"
once_cell = "1.10.0"
flume = "0.10.12"
pub-sub = "2.0.0"
colored = "2"
ctrlc = "3.2.2"
